--- a/demura/demura.vcxproj.filters
+++ b/demura/demura.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="gaussian_filter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="preprocess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Performance.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
