--- a/demura/demura.vcxproj
+++ b/demura/demura.vcxproj
@@ -70,8 +70,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>E:\externs\opencv\include;E:\externs\Eigen;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\externs\opencv\libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\externs\opencv\include;E:\externs\Eigen;D:\bin\PCL\PCL 1.9.1\3rdParty\FLANN\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\externs\opencv\libs;D:\bin\PCL\PCL 1.9.1\3rdParty\FLANN\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,7 +116,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_x64_world310.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>flann.lib;opencv_x64_world310.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
