--- a/demura/demura.vcxproj.filters
+++ b/demura/demura.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="preprocess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pentile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Performance.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="preprocess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pentile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
