--- a/demura/demura.vcxproj.filters
+++ b/demura/demura.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="pentile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gmatch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Performance.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pentile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gmatch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
